# kompIT

./: .gitignore  Empfehlungen.md  IT Kompetenz Zusammenfassung - anonymisiert.xlsx  README.md  app.py  kompetenzdaten.json  main.py  pyproject.toml
.streamlit/: config.toml
src/: __init__.py  charts.py  config.py  data_loader.py  metrics.py
tests/unit/: test_data_loader.py  test_metrics.py
